syntax = "proto3";

package persistence.v1;

// AccountDebited is used in tests
message AccountDebited {
  string account_number = 1;
  float balance = 2;
}

// Account represents the state to persist as snapshot
message Account {
  string account_number = 1;
  float actual_balance = 2;
}
